added php extension ext-mongodb to composer
because MongoRegex class is deprecated for PHP 7.4

--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
         "justinrainbow/json-schema": "^5.2",
         "league/oauth2-google": "^2.0",
         "mongodb/mongodb": "^1.5",
-        "slim/slim": "^3.0"
+        "ext-mongodb": "^1.6"
     },
     "autoload": {
       "psr-4": {
