changes in .env

--- a/.env.sample
+++ b/.env.sample
@@ -33,7 +33,7 @@ VAULT_PORT=8089
 VAULT_ADDR= "http://0.0.0.0:8200"
 VAULT_API_ADDR= "http://0.0.0.0:8200"
 VAULT_ADDRESS="http://0.0.0.0:8200"
-
+VAULT_UI_PORT=8200
 
 
 DOCKER_GROUP=120
