--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,7 @@ services:
       MONGO_INITDB_DATABASE: ${MONGO_DB}
     ports:
       - ${MONGO_PORT}:27017
+    command: mongod --port ${MONGO_PORT}
     links:
       - keycloak
     env_file: .env
