--- a/.env.sample
+++ b/.env.sample
@@ -27,7 +27,7 @@ MONGO_INITDB_COLLECTION=VREcollection
 MONGO_PORT=27017
 
 
-VAULT_PORT_UI=8201
+VAULT_UI_PORT=8201
 VAULT_PORT=8089
 VAULT_ADDR= "http://0.0.0.0:8200"
 VAULT_API_ADDR= "http://0.0.0.0:8200"
