--- a/front_end/openVRE/config/globals.inc.php.sample
+++ b/front_end/openVRE/config/globals.inc.php.sample
@@ -62,6 +62,15 @@ $GLOBALS['urlLogout']              = $GLOBALS['authServer'].'/realms/'.$GLOBALS[
 $GLOBALS['adminToken']             = $GLOBALS['authServer']."/realms/master/protocol/openid-connect/token"; // get Admin token
 $GLOBALS['adminRealm']             = $GLOBALS['authServer']."/admin/realms/".$GLOBALS['authRealm']; // admin keycloak users
 
+// Vault integration and roles
+$GLOBALS['vaultUrl'] = 'https://'.$_ENV['HOSTNAME'].'/vault/';
+$GLOBALS['vaultToken'] = 'root';
+//$jwtToken = $_SESSION['User']['JWT'];
+$GLOBALS['vaultRolename'] = 'demo';
+$GLOBALS['secretPath'] = 'secret/mysecret/data/';
+
+
+
 /************************
 // Definitions
 ************************/
