keycloak local ip

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -102,7 +102,8 @@ services:
         KEYCLOAK_USER: ${KEYCLOAK_USER}
         KEYCLOAK_PASSWORD: ${KEYCLOAK_PASSWORD}
         PROXY_ADDRESS_FORWARDING: "false"
-        KEYCLOAK_FRONTEND_URL: "${FQDN_HOST_PROTOCOL}://${FQDN_HOST}/auth"
+        #KEYCLOAK_FRONTEND_URL: "${FQDN_HOST_PROTOCOL}://${FQDN_HOST}:${KEYCLOAK_PORT}/auth"
+        KEYCLOAK_FRONTEND_URL: "http://172.21.0.12:8080/auth"
 
 
     volumes:
