--- a/front_end/openVRE/config/globals.inc.php.sample
+++ b/front_end/openVRE/config/globals.inc.php.sample
@@ -12,6 +12,7 @@ $GLOBALS['AppPrefix'] = "PROJECT"; // project url acronym
 $GLOBALS['NAME']      = "PROJECT_NAME"; // project name
 $GLOBALS['SITETITLE'] = "PROJECT_TITLE | Virtual Research Environment"; // site title
 $GLOBALS['TIMEOUT']   = 3600; // session and cookies timeout
+$GLOBALS['host_volumes_path'] = "/home/bscuser/Escritorio/dockerized_vre/volumes";
 
 // Email
 $GLOBALS['mail_credentials'] = __DIR__."/mail.conf"; // SMTP credentials
