--- a/front_end/openVRE/config/globals.inc.php.sample
+++ b/front_end/openVRE/config/globals.inc.php.sample
@@ -12,7 +12,7 @@ $GLOBALS['AppPrefix'] = "PROJECT"; // project url acronym
 $GLOBALS['NAME']      = "PROJECT_NAME"; // project name
 $GLOBALS['SITETITLE'] = "PROJECT_TITLE | Virtual Research Environment"; // site title
 $GLOBALS['TIMEOUT']   = 3600; // session and cookies timeout
-$GLOBALS['host_volumes_path'] = "/home/bscuser/Escritorio/dockerized_vre/volumes";
+$GLOBALS['host_volumes_path'] = "/your_system_path/dockerized_vre/volumes";
 
 // Email
 $GLOBALS['mail_credentials'] = __DIR__."/mail.conf"; // SMTP credentials
@@ -141,19 +141,20 @@ $GLOBALS['placeholder_textarea'] = "Click right button to select file(s)"; // te
 // Cloud infrastructures
 $GLOBALS['cloud']              = "my_on_premises_cloud"; // VRE central cloud. Options are any of $GLOBALS['clouds']
 $GLOBALS['clouds'] = Array(
-		'my_on_premises_cloud' => array(
-			"http_host"	    => "www.mydomain.com",	     // used in getCurrentCloud
-			"dataDir_fs"        => "/NFS/export/path/userdata/", // export path for NFS server
-			"pubDir_fs"         => "/NFS/export/path/public/",   // export path for NFS server
-			"dataDir_virtual"   => $GLOBALS['dataDir'],
-			"pubDir_virtual"    => $GLOBALS['pubDir'],
-			"PMESserver_domain" => "pmes.mydomain.com",
-			"PMESserver_port"   => "80",
-			"PMESserver_address"=> "/",
-			"imageTypes" 	    => array(),                      // list of cloud OCCI templates indexed by RAM (GB)
-			"auth"	            => array("required" => False)
-		),
-
+                'local' => array(
+                        "http_host"         => "www.mydomain.com",           // used in getCurrentCloud
+                        "dataDir_fs"        => "/NFS/export/path/userdata/", // export path for NFS server
+                        "pubDir_fs"         => "/NFS/export/path/public/",   // export path for NFS server
+                        "dataDir_host"   => $GLOBALS['dataDir'],
+                        "pubDir_host"    => $GLOBALS['pubDir'],
+                        "dataDir_virtual"    => $GLOBALS["host_volumes_path"].$GLOBALS['dataDir'],
+                        "pubDir_virtual"    => $GLOBALS["host_volumes_path"].$GLOBALS['pubDir'],
+                        "PMESserver_domain" => "pmes.mydomain.com",
+                        "PMESserver_port"   => "80",
+                        "PMESserver_address"=> "/",
+                        "imageTypes"        => array(),                      // list of cloud OCCI templates indexed by RAM (GB)
+                        "auth"              => array("required" => False)
+                ),
 		'my_remote_2' => array(
 			"http_host"	    => "www.mydomain2.com",	      // used in getCurrentCloud
 			"dataDir_fs"   	    => "/NFS/export/path2/userdata/", // export path for NFS server
