--- a/volumes/.gitignore
+++ b/volumes/.gitignore
@@ -5,13 +5,10 @@ shared_data/public/*
 shared_data/sampledata/*
 vault/logs/*
 vault/file/*
-<<<<<<< HEAD
 openVRE/tools/*
 openVRE/config/*
-openVre/visualizers/*
+openVRE/visualizers/*
 openVRE/config/globals.inc.php
-=======
 openVRE/config/*
 #openVRE/tools/*
 #openVRE/visualizers/*
->>>>>>> c7b4b415a818198e18d63613f704505351560594
