chore: upgrade mongo version in frontend image

--- a/front_end/Dockerfile
+++ b/front_end/Dockerfile
@@ -22,9 +22,9 @@ RUN apt-get update && apt-get install -y libmcrypt-dev \
     && docker-php-ext-configure gd --with-freetype=/usr/include/ --with-jpeg=/usr/include/ \
     && docker-php-ext-install gd 
 
-RUN apt-get update && apt-get install -y gnupg software-properties-common
-RUN curl -fsSL https://www.mongodb.org/static/pgp/server-4.2.asc | apt-key add -
-RUN add-apt-repository 'deb https://repo.mongodb.org/apt/debian buster/mongodb-org/4.2 main'
+RUN apt-get update && apt-get install gnupg curl
+RUN curl -fsSL https://www.mongodb.org/static/pgp/server-7.0.asc |gpg -o /usr/share/keyrings/mongodb-server-7.0.gpg --dearmor
+RUN echo "deb [ signed-by=/usr/share/keyrings/mongodb-server-7.0.gpg ] http://repo.mongodb.org/apt/debian bookworm/mongodb-org/7.0 main" | tee /etc/apt/sources.list.d/mongodb-org-7.0.list
 RUN apt-get update
 RUN apt-get install -y mongodb-org
 
