fix: interactive tools, object storage frontend and launch form

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@ demo.hcl
 front_end/openVRE/config/globals.inc.php
 front_end/openVRE/config/*.conf
 vault/config/public-key.pem
+volumes/shared_data/userdata
+
