--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,6 @@ demo.hcl
 front_end/openVRE/config/globals.inc.php
 front_end/openVRE/config/*.conf
 vault/config/public-key.pem
+vendor/
+composer.lock
+volumes/shared_data/userdata
