--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,9 @@
 .env
-demo.hcl
+composer.lock
 front_end/openVRE/config/globals.inc.php
 front_end/openVRE/config/*.conf
 vault/config/public-key.pem
 vendor/
-composer.lock
-volumes/shared_data/userdata
-
+volumes/mongo_data/
+volumes/openVRE/
+volumes/shared_data/
