fix: correct user paths

--- a/front_end/openVRE/config/globals.inc.php.sample
+++ b/front_end/openVRE/config/globals.inc.php.sample
@@ -155,10 +155,10 @@ $GLOBALS['clouds'] = Array(
                         "http_host"         => "www.mydomain.com",           // used in getCurrentCloud
                         "dataDir_fs"        => "/NFS/export/path/userdata/", // export path for NFS server
                         "pubDir_fs"         => "/NFS/export/path/public/",   // export path for NFS server
-                        "dataDir_host"   => $GLOBALS['dataDir'],
-                        "pubDir_host"    => $GLOBALS['pubDir'],
-                        "dataDir_virtual"    => $GLOBALS["host_volumes_path"].$GLOBALS['dataDir'],
-                        "pubDir_virtual"    => $GLOBALS["host_volumes_path"].$GLOBALS['pubDir'],
+                        "dataDir_virtual"   => $GLOBALS['dataDir'],
+                        "pubDir_virtual"    => $GLOBALS['pubDir'],
+                        "dataDir_host"    => $GLOBALS["host_volumes_path"].$GLOBALS['dataDir'],
+                        "pubDir_host"    => $GLOBALS["host_volumes_path"].$GLOBALS['pubDir'],
                         "PMESserver_domain" => "pmes.mydomain.com",
                         "PMESserver_port"   => "80",
                         "PMESserver_address"=> "/",
