chore: ignore all volumes content

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,4 @@ front_end/openVRE/config/globals.inc.php
 front_end/openVRE/config/*.conf
 vault/config/public-key.pem
 vendor/
-volumes/mongo_data/
-volumes/openVRE/
-volumes/shared_data/
+volumes/
