fix: install wget in sge
It is used in the interactive tools

--- a/sge/Dockerfile
+++ b/sge/Dockerfile
@@ -12,6 +12,7 @@ RUN apt-get update -y  \
         parallel \
         g++ \
         docker.io \
+        wget \
     && apt-get clean \
     && rm -rf /var/lib/apt/lists/*
 
