feat: add apache php service config file with proxy
Add new configuration file for the apache server launched by the front_end service. Include proxy template for interactive tools.

--- a/front_end/Dockerfile
+++ b/front_end/Dockerfile
@@ -2,7 +2,12 @@
 FROM webdevops/php-apache:8.3
 
 ARG DEBIAN_FRONTEND=noninteractive
+
+# Apache config file
+COPY 10-server.conf /opt/docker/etc/httpd/conf.d/10-server.conf
+
 RUN apt-get update
+RUN a2enmod proxy proxy_http
 RUN apt install -y nodejs
 RUN apt-get install -y autoconf pkg-config libssl-dev
 RUN docker-php-ext-install bcmath
@@ -50,7 +55,6 @@ USER application
 #RUN sudo usermod -aG docker application
 
 
-ENV WEB_DOCUMENT_ROOT=/var/www/html/openVRE/public/
 WORKDIR /var/www/html/openVRE/public
 RUN pwd
 EXPOSE 88 443
