fix: apache proxy conf

--- a/front_end/10-server.conf
+++ b/front_end/10-server.conf
@@ -4,8 +4,8 @@
     DocumentRoot /var/www/html/openVRE/public/
     DirectoryIndex index.php
 
-    # ProxyPass /interactive-tool/tool_container_name/ http://tool_container_name:tool_port/
-    # ProxyPassReverse /interactive-tool/tool_container_name/ http://tool_container_name:tool_port/
+    RewriteEngine On
+    RewriteRule ^/interactive-tool/([^/]+)/?(.*) http://$1:8090/$2 [P,L]
 
     ErrorLog  /vre-error.log
     CustomLog /vre-access.log combined
