fix: docker default host ip

--- a/front_end/openVRE/config/globals.inc.php.sample
+++ b/front_end/openVRE/config/globals.inc.php.sample
@@ -52,7 +52,7 @@ $GLOBALS['logs_datetime'] = "dd.M.Y HH:mm:ss";
 
 
 // Interactive tools
-$GLOBALS['NETWORK_IP'] = "0.0.0.0";
+$GLOBALS['NETWORK_IP'] = "172.17.0.1"; # default host ip for docker
 $GLOBALS['interactive_range_start_port'] = "9001";
 $GLOBALS['interactive_range_end_port'] = "9010";
 
