feat: add docker (compose) to SGE image

--- a/sge/Dockerfile
+++ b/sge/Dockerfile
@@ -11,10 +11,24 @@ RUN apt-get update -y  \
         vim \
         parallel \
         g++ \
-        docker.io \
         wget \
     && apt-get clean \
     && rm -rf /var/lib/apt/lists/*
+
+# Add Docker's official GPG key:
+RUN apt-get update
+RUN apt-get install ca-certificates curl
+RUN install -m 0755 -d /etc/apt/keyrings
+RUN curl -fsSL https://download.docker.com/linux/debian/gpg -o /etc/apt/keyrings/docker.asc
+RUN chmod a+r /etc/apt/keyrings/docker.asc
+
+# Add the repository to Apt sources:
+RUN echo \
+    "deb [arch=$(dpkg --print-architecture) signed-by=/etc/apt/keyrings/docker.asc] https://download.docker.com/linux/debian \
+    $(. /etc/os-release && echo "$VERSION_CODENAME") stable" | \
+    tee /etc/apt/sources.list.d/docker.list > /dev/null
+RUN apt-get update
+RUN apt-get install -y docker-compose-plugin
 
 # Copy the local keys into the Docker image
 COPY keys /keys
