--- a/front_end/10-server.conf
+++ b/front_end/10-server.conf
@@ -7,6 +7,10 @@
     RewriteEngine On
     RewriteRule ^/interactive-tool/([^/]+)/?(.*) http://$1:8090/$2 [P,L]
 
+    <Location /interactive-tool/cbioportal-webapp/>
+        RequestHeader set X-Forwarded-Prefix "/interactive-tool/cbioportal-webapp"
+    </Location>
+
     ErrorLog  /vre-error.log
     CustomLog /vre-access.log combined
 </VirtualHost>
