--- a/sge/Dockerfile
+++ b/sge/Dockerfile
@@ -17,7 +17,7 @@ RUN apt-get update -y  \
 
 # Add Docker's official GPG key:
 RUN apt-get update
-RUN apt-get install ca-certificates curl
+RUN apt-get install -y ca-certificates curl
 RUN install -m 0755 -d /etc/apt/keyrings
 RUN curl -fsSL https://download.docker.com/linux/debian/gpg -o /etc/apt/keyrings/docker.asc
 RUN chmod a+r /etc/apt/keyrings/docker.asc
@@ -28,7 +28,7 @@ RUN echo \
     $(. /etc/os-release && echo "$VERSION_CODENAME") stable" | \
     tee /etc/apt/sources.list.d/docker.list > /dev/null
 RUN apt-get update
-RUN apt-get install -y docker-compose-plugin
+RUN apt-get install -y docker-ce docker-ce-cli containerd.io docker-buildx-plugin docker-compose-plugin
 
 # Copy the local keys into the Docker image
 COPY keys /keys
