chore: some refactor and minor fixes

--- a/.env.sample
+++ b/.env.sample
@@ -3,7 +3,7 @@
 
 # FOR WINDOWS/WSL USE IP
 FQDN_HOST=localhost # or external FQDN
-FQDN_HOST_PROTOCOL=https
+FQDN_HOST_PROTOCOL=http
 NETWORK_NAME=net_vre
 
 
