--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -163,8 +163,8 @@ services:
       - /var/run/docker.sock:/var/run/docker.sock:rprivate
       - ./sge/configuration:/tmp/configuration:rprivate
       - ./sge/configuration:/etc/gridengine/configuration:rprivate
+      - ./sge/shared_scripts:/shared_scripts:rshared
       - ./volumes/shared_data:/shared_data:rshared
-      - ./volumes/shared_scripts:/shared_scripts:rshared
     devices:
       - '/dev/fuse:/dev/fuse'
     cap_add:
