feat: add basic API endpoints with auth by JWT

--- a/front_end/openVRE/apache/server.conf
+++ b/front_end/openVRE/apache/server.conf
@@ -4,6 +4,11 @@
     DocumentRoot /var/www/html/openVRE/public/
     DirectoryIndex index.php
 
+    <Directory "/var/www/html/openVRE/public/api">
+        AllowOverride All
+        Require all granted
+    </Directory>
+
     RewriteEngine On
     RewriteRule ^/interactive-tool/([^/]+)/?(.*) http://$1:8090/$2 [P,L]
 
