--- a/front_end/openVRE/composer.json
+++ b/front_end/openVRE/composer.json
@@ -1,41 +1,43 @@
 {
-    "require": {
-        "auth0/auth0-php": "^5.0",
-        "cache/mongodb-adapter": "^1.1",
-        "jenssegers/mongodb": "^3.8",
-        "justinrainbow/json-schema": "^5.2",
-        "league/oauth2-google": "^2.0",
-        "mongodb/mongodb": "^1.11",
-        "phpseclib/phpseclib": "~3.0",
-        "swaggest/json-schema": "^0.12.34",
-   	    "guzzlehttp/guzzle": "*",
-        "ext-openssl" : "*",
-        "slim/slim": "4.*",
-        "slim/extras": "*",
-        "slim/http": "^1.3.0",
-        "slim/psr7": "^1.6.0",
-        "monolog/monolog": "^2.5",
-        "chadicus/slim-oauth2": "^3.1",
-        "zircote/swagger-php": "^2.0",
-        "squizlabs/php_codesniffer": "^3.5"
-    },
-    "autoload": {
-      "psr-4": {
-        "App\\": "app/",
-        "App\\Controllers\\": "app/controllers",
-        "App\\Models\\": "app/models",
-        "App\\Middleware\\": "app/Middleware",
-        "App\\Handlers\\": "app/Handlers"
-      }
-    },
-    "autoload-dev": {
-      "psr-4": {
-        "App\\Test\\": "tests"
-      }
-    },
-    "config": {
-      "sort-packages": true
-    },
-    "minimum-stability": "dev",
-    "prefer-stable": true
+  "require": {
+    "ext-openssl": "*",
+    "auth0/auth0-php": "^8.0",
+    "chadicus/slim-oauth2": "^3.1",
+    "firebase/php-jwt": "^6.11",
+    "guzzlehttp/guzzle": "*",
+    "justinrainbow/json-schema": "^5.2",
+    "league/oauth2-google": "^2.0",
+    "mongodb/mongodb": "^2.1",
+    "monolog/monolog": "^2.5",
+    "phpseclib/phpseclib": "~3.0",
+    "slim/extras": "*",
+    "slim/http": "^1.3.0",
+    "slim/psr7": "^1.6.0",
+    "slim/slim": "4.*",
+    "squizlabs/php_codesniffer": "^3.5",
+    "swaggest/json-schema": "^0.12.34",
+    "zircote/swagger-php": "^2.0"
+  },
+  "autoload": {
+    "psr-4": {
+      "App\\": "app/",
+      "App\\Controllers\\": "app/controllers",
+      "App\\Models\\": "app/models",
+      "App\\Middleware\\": "app/Middleware",
+      "App\\Handlers\\": "app/Handlers"
+    }
+  },
+  "autoload-dev": {
+    "psr-4": {
+      "App\\Test\\": "tests"
+    }
+  },
+  "config": {
+    "sort-packages": true,
+    "allow-plugins": {
+      "php-http/discovery": true
+    }
+  },
+  "minimum-stability": "dev",
+  "prefer-stable": true
 }
