feat: merge mongoDB initilization into one service and store data in docker volume

--- a/.env.sample
+++ b/.env.sample
@@ -37,6 +37,7 @@ MONGO_DB=openVRE
 MONGO_INITDB_ROOT_USERNAME=admin
 MONGO_INITDB_ROOT_PASSWORD=admin
 MONGO_PORT=27017
+DATABASE_VOLUME=mongoDB_data
 
 #VAULT CONFIGURATION
 #Secret managment settings for Vault
