feat: set up vault in dev mode and automate initilization

--- a/.env.sample
+++ b/.env.sample
@@ -26,6 +26,7 @@ DB_PASSWORD=password
 KEYCLOAK_USER=admin
 KEYCLOAK_PASSWORD=pass
 KEYCLOAK_PORT=9099
+KEYCLOAK_REALM=open-vre
 
 #MONGODB CONFIGURATION
 #Database settings for MongoDB
@@ -44,9 +45,8 @@ DATABASE_VOLUME=mongoDB_data
 #Note: These values cannot be changed.
 VAULT_UI_PORT=8201
 VAULT_PORT=8089
-VAULT_ADDR= "http://0.0.0.0:8200"  #Do not change
-VAULT_API_ADDR= "http://0.0.0.0:8200" #Do not change
-VAULT_ADDRESS="http://0.0.0.0:8200"   #Do not change
+VAULT_DEV_LISTEN_ADDRESS=0.0.0.0:8200
+VAULT_ADDR=http://0.0.0.0:8200
 
 #DOCKER CONFIGURATION
 #Settings related to Docker
@@ -60,8 +60,7 @@ DOCKER_GROUP=455
 FRONTEND_PORT=8088 #To be consistent with the $GLOBALS['SERVER']
 FRONTEND_HOSTNAME=front_end
 
-#LEGACY SETTINGS 
 #User ID and group ID for the front-end
 #These should match the IDs running the Docker containers
 UID=1000
-GID=100
+GID=1000
