--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -36,8 +36,7 @@ jobs:
           echo "VAULT_PORT=${{ vars.VAULT_PORT }}" >> .env
           echo "VAULT_UI_PORT=${{ vars.VAULT_UI_PORT }}" >> .env
           echo "VAULT_ADDR=${{ vars.VAULT_ADDR }}" >> .env
-          echo "VAULT_API_ADDR=${{ vars.VAULT_API_ADDR }}" >> .env
-          echo "VAULT_ADDRESS=${{ vars.VAULT_ADDRESS }}" >> .env
+          echo "VAULT_DEV_LISTEN_ADDRESS=${{ vars.VAULT_DEV_LISTEN_ADDRESS }}" >> .env
           echo "POSTGRES_DB=${{ vars.POSTGRES_DB }}" >> .env
           echo "POSTGRES_USER=${{ vars.POSTGRES_USER }}" >> .env
           echo "POSTGRES_PASSWORD=${{ vars.POSTGRES_PASSWORD }}" >> .env
