--- a/sge/Dockerfile
+++ b/sge/Dockerfile
@@ -72,5 +72,7 @@ ARG SUBMITTER_HOSTNAME
 RUN echo "$SUBMITTER_HOSTNAME" > /home/application/submit_hosts.list
 RUN cat /home/application/submit_hosts.list
 
+COPY entrypoint.sh /entrypoint.sh
+RUN chmod +x /entrypoint.sh
 
-CMD /usr/local/bin/setup_gridengine.sh && /usr/local/bin/modify_config.sh && /usr/local/bin/modify_sched_config.sh && /usr/local/bin/setup_submitter.sh /home/application/submit_hosts.list && (/usr/local/bin/run_sched_logger.sh &) && tail -f /var/spool/gridengine/qmaster/messages /var/spool/gridengine/execd/sgecore/messages
+CMD ["/entrypoint.sh"]
